--- a/argus.ipynb
+++ b/argus.ipynb
@@ -66,9 +66,9 @@
         "id": "j56pVJ2hZ2i5"
       },
       "source": [
-        "## 2.2 Obtenção dos Dados das Tabelas de Dimensão\n",
+        "## 2.2 Obtenção dos Dados das Tabelas repassadas e salvas no github\n",
         "\n",
-        "Os comandos a seguir baixam os dados que povoam as tabelas de dimensão. "
+        "Os comandos a seguir baixam os dados que povoam as tabelas "
       ]
     },
     {
@@ -122,26 +122,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YVEgY9qKflBV"
-      },
-      "source": [
-        "## 3.1 Instalação\n",
-        "\n",
-        "Neste *notebook* é criado um *cluster* Spark composto apenas por um **nó mestre**. Ou seja, o *cluster* não possui um ou mais **nós de trabalho** e o **gerenciador de cluster**. Nessa configuração, as tarefas (*tasks*) são realizadas no próprio *driver* localizado no **nó mestre**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KaM-OnIjgLS2"
-      },
-      "source": [
-        "Para que o cluster possa ser criado, primeiramente é instalado o Java Runtime Environment (JRE) versão 8. "
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "NXls3bfoglKW"
@@ -157,15 +137,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7BQzZfDYhb4j"
-      },
-      "source": [
-        "Na sequência, é feito o *download* do Apache Spark versão 3.0.0."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "8a_Yv59zg3gm"
@@ -178,15 +149,6 @@
       ],
       "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RETWX6wqhkLf"
-      },
-      "source": [
-        "Na sequência, são configuradas as variáveis de ambiente JAVA_HOME e SPARK_HOME. Isto permite que tanto o Java quanto o Spark possam ser encontrados."
-      ]
     },
     {
       "cell_type": "code",
@@ -204,19 +166,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ql0z7Ro1iHQb"
-      },
-      "source": [
-        "Por fim, são instalados dois pacotes da linguagem de programação Python, cujas funcionalidades são descritas a seguir.\n",
-        "\n",
-        "> **Pacote findspark:** Usado para ler a variável de ambiente SPARK_HOME e armazenar seu valor na variável dinâmica de ambiente PYTHONPATH. Como resultado, Python pode encontrar a instalação do Spark. \n",
-        "\n",
-        "> **Pacote pyspark:** PySpark é a API do Python para Spark. Ela possibilita o uso de Python, considerando que o *framework* Apache Spark encontra-se desenvolvido na linguagem de programação Scala. "
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "5oSYOwKljPf5"
@@ -230,19 +179,6 @@
       ],
       "execution_count": 7,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eAaLyjPzmIwZ"
-      },
-      "source": [
-        "## 3.2 Conexão\n",
-        "\n",
-        "PySpark não é adicionado ao *sys.path* por padrão. Isso significa que não é possível importá-lo, pois o interpretador da linguagem Python não sabe onde encontrá-lo. \n",
-        "\n",
-        "Para resolver esse aspecto, é necessário instalar o módulo `findspark`. Esse módulo mostra onde PySpark está localizado. Os comandos a seguir têm essa finalidade.\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -278,23 +214,6 @@
       },
       "source": [
         "# 4 Preparação dos Dados\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WtUGn-uyBJWY"
-      },
-      "source": [
-        "## 4.1 Geração dos DataFrames\n",
-        "\n",
-        "Para a leitura dos dados dos arquivos .csv, é utilizado o método `spark.read.csv`. Seus parâmetros são:\n",
-        "\n",
-        "\n",
-        "- `path`: endereço do arquivo que é lido.\n",
-        "- `header`: indica se o arquivo possui um cabeçalho.\n",
-        "- `sep`: especifica o caractere que separa os campos do arquivo.\n",
-        "\n"
       ]
     },
     {
@@ -407,26 +326,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "09knZQIwO03y"
-      },
-      "source": [
-        "## 4.2 Criação de Visões Temporárias\n",
-        "\n",
-        "Para que seja possível executar consultas SQL usando Spark SQL, é necessário criar visões temporárias. Uma visão temporária é uma forma na qual um DataFrame pode ser consultado como se fosse uma tabela.\n",
-        "\n",
-        "Para tanto, deve ser utilizado o método  `createOrReplaceTempView` e deve ser passado como parâmetro uma *string* que é o nome da tabela que é criada a partir do DataFrame.  Os comandos a seguir criam uma visão temporária para cada DataFrame da aplicação de *data warehousing*. \n",
-        " "
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "nB4dFUqHoiaW"
       },
       "source": [
-        "#criando as visões temporárias para as tabelas de dimensão\n",
+        "#criando as visões temporárias para as tabelas\n",
         "repo1.createOrReplaceTempView(\"repo1\")\n",
         "repo2.createOrReplaceTempView(\"repo2\")\n",
         "vhf_code.createOrReplaceTempView(\"vhf_code\")"
@@ -444,55 +349,67 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MABYjSYf7L4g"
-      },
-      "source": [
-        "## 5.1 Operação Slice and Dice \n",
-        "\n",
-        "**Definição**: Restringe os dados sendo analisados a um subconjunto desses dados.\n",
-        "\n",
-        "- Slice: corte para um valor fixo, diminuindo a dimensionalidade do cubo.\n",
-        "- Dice: seleção de faixas de valores.\n",
-        "\n",
-        "**Exemplo de consulta**: Qual a quantidade de pagamentos realizados no mês de setembro de 2020?"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "DGMSoyQRoqnz",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72d5ad94-6944-4e96-d71b-6841576e50ff"
+        "outputId": "f7aee806-b63e-4539-d51d-aae8d195bce4"
       },
       "source": [
         "query = \"\"\"\n",
-        "SELECT CAST(SUM(quantidadeLancamentos) AS INTEGER) AS `Quantidade de Lançamentos`\n",
-        "FROM data JOIN pagamento ON (data.dataPK = pagamento.dataPK) \n",
-        "WHERE dataAno = 2020 \n",
-        "      AND dataMes = 9\n",
+        "SELECT vhf_repository_id\n",
+        "FROM repo1 \n",
+        "where value > 2\n",
         "\"\"\"\n",
         "\n",
         "spark.sql(query).show()"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-------------------------+\n",
-            "|Quantidade de Lançamentos|\n",
-            "+-------------------------+\n",
-            "|                      200|\n",
-            "+-------------------------+\n",
+            "+-----------------+\n",
+            "|vhf_repository_id|\n",
+            "+-----------------+\n",
+            "|        184950361|\n",
+            "|        184950325|\n",
+            "|        184950320|\n",
+            "|        184950315|\n",
+            "|        184950310|\n",
+            "|        184950305|\n",
+            "|        184950299|\n",
+            "|        184950293|\n",
+            "|        184950287|\n",
+            "|        184950281|\n",
+            "|        184950275|\n",
+            "|        184950268|\n",
+            "|        184950262|\n",
+            "|        184950256|\n",
+            "|        184950250|\n",
+            "|        184950244|\n",
+            "|        184950376|\n",
+            "|        184950360|\n",
+            "|        184950324|\n",
+            "|        184950319|\n",
+            "+-----------------+\n",
+            "only showing top 20 rows\n",
             "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# AS PROXIMAS CELULAS IR SUBSTITUINDO PELOS CODIGOS SOLICITADOS"
+      ],
+      "metadata": {
+        "id": "fjXdli5jktkT"
+      }
     },
     {
       "cell_type": "markdown",
