--- a/argus.ipynb
+++ b/argus.ipynb
@@ -40,9 +40,8 @@
         "id": "CCCNC64AzBG0"
       },
       "source": [
-        "## 2.1 Baixando o Módulo wget\n",
-        "\n",
-        "Para baixar os dados referentes ao esquema relacional da constelação de fatos da BI Solutions, é utilizado o módulo  **wget**. O comando a seguir realiza a instalação desse módulo. <br>"
+        "## 2.1 Downloading wget\n",
+        "\n"
       ]
     },
     {
@@ -66,9 +65,8 @@
         "id": "j56pVJ2hZ2i5"
       },
       "source": [
-        "## 2.2 Obtenção dos Dados das Tabelas repassadas e salvas no github\n",
-        "\n",
-        "Os comandos a seguir baixam os dados que povoam as tabelas "
+        "## 2.2 Downloading the databases as copied to github\n",
+        "\n"
       ]
     },
     {
