--- a/argus.ipynb
+++ b/argus.ipynb
@@ -6,7 +6,6 @@
       "name": "argus.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +35,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "https://movile.blog/introducao-a-spark-usando-o-google-colab/\n",
+        "\n",
+        "https://ichi.pro/pt/observacoes-sobre-como-salvar-dados-com-spark-3-0-148135666658161\n"
+      ],
+      "metadata": {
+        "id": "6SF1wXYkQ4pR"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "CCCNC64AzBG0"
       },
@@ -56,7 +66,7 @@
         "#criando pasta para salvar as bases de dados\n",
         "!mkdir data"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -78,7 +88,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a34f6ed3-eb6d-4956-a75d-ab5950132ed3"
+        "outputId": "f264a195-7a61-4a40-9139-23318518bc96"
       },
       "source": [
         "#baixando os dados das tabelas de dimensão\n",
@@ -222,7 +232,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5801c082-6ef4-4821-afd7-cdf27d3d1bca"
+        "outputId": "56d4df31-a540-4a87-e57b-650257077f7b"
       },
       "source": [
         "#criando e exibindo o DataFrame para a tabela repo1\n",
@@ -230,7 +240,7 @@
         "repo1 = spark.read.csv(path=\"data/repo1.csv\", header=True, sep=\",\")\n",
         "repo1.show(5)\n"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +268,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cfdd90d1-7165-4e44-a6cd-7de54bac4e23"
+        "outputId": "9e833ccf-196c-4250-b2b4-d2739da2e646"
       },
       "source": [
         "#criando e exibindo o DataFrame para a tabela repo2\n",
@@ -266,7 +276,7 @@
         "repo2 = spark.read.csv(path=\"data/repo2.csv\", header=True, sep=\",\")\n",
         "repo2.show(5)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +304,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "27767ea5-559f-423f-9018-e92b3d7281e2"
+        "outputId": "41844620-2b2a-4bde-e83b-c81bb284ade8"
       },
       "source": [
         "#criando e exibindo o DataFrame para a tabela vhf_code\n",
@@ -302,7 +312,7 @@
         "vhf_code = spark.read.csv(path=\"data/vhf_code.csv\", header=True, sep=\",\")\n",
         "vhf_code.show(5)\n"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,8 +344,34 @@
         "repo2.createOrReplaceTempView(\"repo2\")\n",
         "vhf_code.createOrReplaceTempView(\"vhf_code\")"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vhf_code"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k7cQ9bYbMosj",
+        "outputId": "8bd37545-bb2e-43e8-b7af-4d537b82aad7"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[description: string, external_description: string, description_short: string, external_query_str: string, vhf_code_id: string]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -353,7 +389,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f7aee806-b63e-4539-d51d-aae8d195bce4"
+        "outputId": "9d4e50f8-67e1-4a62-c62e-35d292dbb13d"
       },
       "source": [
         "query = \"\"\"\n",
@@ -364,7 +400,7 @@
         "\n",
         "spark.sql(query).show()"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,6 +430,90 @@
             "|        184950324|\n",
             "|        184950319|\n",
             "+-----------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "( \n",
+        "  repo1.write\n",
+        "  .mode('append') # or append\n",
+        "  #.partitionBy(col_name) # this is optional\n",
+        "  .bucketBy(5, 'forward_period') # n is number of buckets\n",
+        "  .sortBy('forward_period')\n",
+        "  #.format('parquet') # this is optional, parquet is default\n",
+        "  .option('path','file:///Users/reinaldolepsch/Downloads')\n",
+        "  .saveAsTable('tb_output')\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "z74IpVAeI664"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = spark.table('tb_output')"
+      ],
+      "metadata": {
+        "id": "KDmTR3dNPhZN"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query = \"\"\"\n",
+        "SELECT *\n",
+        "FROM tb_output \n",
+        "\"\"\"\n",
+        "\n",
+        "spark.sql(query).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gkozdamhPqwo",
+        "outputId": "5f28fb83-0ec8-471b-bed3-05a7b9e4ea5f"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------+-----------+--------------------+-----+---------------------+-------------------+--------------+------------+\n",
+            "|vhf_repository_id|vhf_code_id|publication_datetime|value|applies_from_datetime|applies_to_datetime|forward_period|forward_year|\n",
+            "+-----------------+-----------+--------------------+-----+---------------------+-------------------+--------------+------------+\n",
+            "|        184950144|      45692|    15/12/2021 13:22|   38|     15/12/2021 13:21|   15/12/2021 13:22|             4|        2022|\n",
+            "|        184950138|      45688|    15/12/2021 13:22|72.45|     15/12/2021 13:21|   15/12/2021 13:22|             4|        2022|\n",
+            "|        184950132|      45690|    15/12/2021 13:22|72.44|     15/12/2021 13:21|   15/12/2021 13:22|             4|        2022|\n",
+            "|        184950126|      45689|    15/12/2021 13:22|72.45|     15/12/2021 13:21|   15/12/2021 13:22|             4|        2022|\n",
+            "|        184950120|      45691|    15/12/2021 13:22|72.44|     15/12/2021 13:21|   15/12/2021 13:22|             4|        2022|\n",
+            "|        184950143|      45692|    15/12/2021 13:21|   91|     15/12/2021 13:20|   15/12/2021 13:21|             4|        2022|\n",
+            "|        184950137|      45688|    15/12/2021 13:21|72.44|     15/12/2021 13:20|   15/12/2021 13:21|             4|        2022|\n",
+            "|        184950131|      45690|    15/12/2021 13:21|72.41|     15/12/2021 13:20|   15/12/2021 13:21|             4|        2022|\n",
+            "|        184950125|      45689|    15/12/2021 13:21|72.44|     15/12/2021 13:20|   15/12/2021 13:21|             4|        2022|\n",
+            "|        184950119|      45691|    15/12/2021 13:21|72.44|     15/12/2021 13:20|   15/12/2021 13:21|             4|        2022|\n",
+            "|        184950142|      45692|    15/12/2021 13:20|   11|     15/12/2021 13:19|   15/12/2021 13:20|             4|        2022|\n",
+            "|        184950136|      45688|    15/12/2021 13:20|72.45|     15/12/2021 13:19|   15/12/2021 13:20|             4|        2022|\n",
+            "|        184950130|      45690|    15/12/2021 13:20|72.44|     15/12/2021 13:19|   15/12/2021 13:20|             4|        2022|\n",
+            "|        184950124|      45689|    15/12/2021 13:20|72.47|     15/12/2021 13:19|   15/12/2021 13:20|             4|        2022|\n",
+            "|        184950118|      45691|    15/12/2021 13:20|72.46|     15/12/2021 13:19|   15/12/2021 13:20|             4|        2022|\n",
+            "|        184950141|      45692|    15/12/2021 13:19|    9|     15/12/2021 13:18|   15/12/2021 13:19|             4|        2022|\n",
+            "|        184950135|      45688|    15/12/2021 13:19|72.47|     15/12/2021 13:18|   15/12/2021 13:19|             4|        2022|\n",
+            "|        184950129|      45690|    15/12/2021 13:19|72.46|     15/12/2021 13:18|   15/12/2021 13:19|             4|        2022|\n",
+            "|        184950123|      45689|    15/12/2021 13:19|72.47|     15/12/2021 13:18|   15/12/2021 13:19|             4|        2022|\n",
+            "|        184950117|      45691|    15/12/2021 13:19|72.46|     15/12/2021 13:18|   15/12/2021 13:19|             4|        2022|\n",
+            "+-----------------+-----------+--------------------+-----+---------------------+-------------------+--------------+------------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
